Fix the page pic moving the paragraph down on mobile

--- a/themes/red/assets/css/site.css
+++ b/themes/red/assets/css/site.css
@@ -121,9 +121,7 @@
     }
 
     .page-pic {
-        visibility: hidden;
-        height: 0 !important;
-        width: 0 !important;
+        display: none;
     }
 
     .site-menu > img {
